--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="wrapper">
-    <h1>Erick Login</h1>
+    <h1>Erick Login - Updated Main</h1>
         <form action="/login" id="login_form" method="POST" >
             <input type="text" name="email_address" value="cpadua@village88.com">
             <input type="password" name="password">
